finalizado o modulo de busca

--- a/src/app/servico-prestado/servico-prestado-form/servico-prestado-form.component.html
+++ b/src/app/servico-prestado/servico-prestado-form/servico-prestado-form.component.html
@@ -6,6 +6,17 @@
     <form #form="ngForm" (submit)="onSubmit()">
         <div class="row">
             <div class="col-md-12">
+                <div class="alert alert-success" role="alert" *ngIf="success == true">
+                  Serviço Prestado salvo com sucesso!
+                </div>
+                <div class="alert alert-danger" role="alert" *ngFor="let erro of errors">
+                   {{ erro }}
+                 </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-12">
                 <div class="form-group">
                     <label for="lblCliente">Cliente</label>
                     <select id="lblCliente" class="form-control" [ngModelOptions]="{ standalone: true }" [(ngModel)]="servico.idCliente">
@@ -32,7 +43,7 @@
                 <div class="form-group">
                     <label for="inputData">Data: </label>
                     <input class="form-control" 
-                            [(ngModel)]="servico.data" type="date" 
+                            [(ngModel)]="servico.data" type="text" 
                             name="data" id="inputData" />
                 </div>
             </div>
