--- a/src/app/template/sidebar/sidebar.component.html
+++ b/src/app/template/sidebar/sidebar.component.html
@@ -15,9 +15,9 @@
                     Clientes
                 </a>    
                     
-                <a class="nav-link collapsed" routerLink="/servico-prestado-form" data-toggle="collapse" 
+                <a class="nav-link collapsed" routerLink="/servico-prestado-listagem" data-toggle="collapse" 
                 data-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts"
-                    ><div class="sb-nav-link-icon"><i class="fas fa-money"></i></div>
+                    ><div class="sb-nav-link-icon"><i class="fas fa-address-card"></i></div>
                     Serviços Prestados
                 </a>  
             </div>
