--- a/src/app/servico-prestado/servico-prestado-lista/servico-prestado-lista.component.html
+++ b/src/app/servico-prestado/servico-prestado-lista/servico-prestado-lista.component.html
@@ -22,8 +22,14 @@
         </div>
         <div class="row">
             <div class="col-md-3">
-                <button type="submit" class="btn btn-primary mt-1">
+                <button type="submit" class="btn btn-primary mt-2">
                     <i class="fa fa-search"></i> Consultar
+                </button>
+
+                <button type="button" 
+                    routerLink="/servico-prestado-form"
+                    class="btn btn-warning mt-2 ml-1">
+                    <i class="fa fa-plus"></i> Novo
                 </button>
             </div>
         </div>
