--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -7,11 +7,11 @@
                         <div class="card shadow-lg border-0 rounded-lg mt-5">
                             <div class="card-header">
                                 <h3 class="text-center font-weight-light my-4">
-                                    Entrada
+                                    {{ cadastrando ? 'Cadastro de Usuário' : 'Entrar' }}
                                 </h3>
                             </div>
                             <div class="card-body">
-                                <div class="alert alert-danger">
+                                <div class="alert alert-danger" *ngIf="loginError">
                                     Login e/ou senha incorreto(a).
                                 </div>
 
@@ -28,13 +28,30 @@
                                                 class="form-control py-4" placeholder="Digite sua senha" />
                                     </div>
 
-                                    <div class="form-group d-flex align-items-center justify-content-between mt-4 mb-0">
-                                        <button type="submit" class="btn btn-primary">
+                                    <div class="form-group align-items-center justify-content-between mt-4 mb-0">
+                                        <button type="submit" class="btn btn-primary" *ngIf="!cadastrando">
                                             Enviar
+                                        </button>
+
+                                        <button type="button" class="btn btn-success" *ngIf="cadastrando">
+                                            Cadastrar
+                                        </button>
+                                        <button type="button" (click)="cancelaCadastro()"
+                                            class="btn btn-danger ml-1" *ngIf="cadastrando">
+                                            Cancelar
                                         </button>
                                     </div>
                                 </form>
                             </div>
+
+                            <div class="card-footer text-center">
+                                <div class="small">
+                                    <a href="#" (click)="preparaCadastrar($event)">
+                                        Não possui usário? Cadastre-se!
+                                    </a>
+                                </div>
+                            </div>
+
                         </div>
                     </div>
                 </div>
