refatorada as rotas do sistema

--- a/src/app/servico-prestado/servico-prestado-lista/servico-prestado-lista.component.html
+++ b/src/app/servico-prestado/servico-prestado-lista/servico-prestado-lista.component.html
@@ -27,7 +27,7 @@
                 </button>
 
                 <button type="button" 
-                    routerLink="/servico-prestado-form"
+                    routerLink="/servicos-prestados/form"
                     class="btn btn-warning mt-2 ml-1">
                     <i class="fa fa-plus"></i> Novo
                 </button>
