--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -11,6 +11,9 @@
                                 </h3>
                             </div>
                             <div class="card-body">
+                                <div class="alert alert-success" *ngIf="mensagemSucesso">
+                                    {{ mensagemSucesso }}
+                                </div>
                                 <div class="alert alert-danger" *ngIf="loginError">
                                     Login e/ou senha incorreto(a).
                                 </div>
@@ -33,7 +36,9 @@
                                             Enviar
                                         </button>
 
-                                        <button type="button" class="btn btn-success" *ngIf="cadastrando">
+                                        <button type="button" class="btn btn-success" 
+                                                (click)="cadastrar()"
+                                                *ngIf="cadastrando">
                                             Cadastrar
                                         </button>
                                         <button type="button" (click)="cancelaCadastro()"
