--- a/src/app/template/sidebar/sidebar.component.html
+++ b/src/app/template/sidebar/sidebar.component.html
@@ -20,11 +20,17 @@
                     ><div class="sb-nav-link-icon"><i class="fas fa-address-card"></i></div>
                     Serviços Prestados
                 </a>  
+                <div class="sb-sidenav-menu-heading">Logout</div>
+                <a class="nav-link collapsed" (click)="logout()" data-toggle="collapse"  href="#"
+                data-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts"
+                    ><div class="sb-nav-link-icon"><i class="fas fa-sign-out-alt"></i></div>
+                    Sair
+                </a> 
             </div>
         </div>
         <div class="sb-sidenav-footer">
-            <div class="small">Logged in as:</div>
-            Start Bootstrap
+            <div class="small">Usuário logado:</div>
+            {{ usuarioLogado }}
         </div>
     </nav>
 </div>
